<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.fragment.app.FragmentContainerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExpand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#3DDC84"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/bubbles_custom_foreground" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="#FFFFFF"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabExpand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/deaths_custom_foreground" />

    <TextView
        android:id="@+id/textDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:layout_marginBottom="12dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="3.2"
        android:shadowDy="3.2"
        android:shadowRadius="2"
        android:text="@string/deaths"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/fabDeaths"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fabDeaths"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="#FFFFFF"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabDeaths"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/recovered_custom_foreground" />

    <TextView
        android:id="@+id/textRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:layout_marginBottom="12dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="3.2"
        android:shadowDy="3.2"
        android:shadowRadius="2"
        android:text="@string/recovered"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/fabRecovered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fabRecovered"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="#FFFFFF"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabRecovered"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/active_custom_foreground" />

    <TextView
        android:id="@+id/textActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:layout_marginBottom="12dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="3.2"
        android:shadowDy="3.2"
        android:shadowRadius="2"
        android:text="@string/active"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/fabActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fabActive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="#ff00bb25"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/confirmed_custom_light_foreground" />


    <TextView
        android:id="@+id/textConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_fab_margin"
        android:layout_marginLeft="@dimen/mini_fab_margin"
        android:layout_marginBottom="12dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="3.2"
        android:shadowDy="3.2"
        android:shadowRadius="2"
        android:text="@string/confirmed"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/fabConfirmed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fabConfirmed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>